<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.educar.actividad2_2.Activity2"
    android:weightSum="1"
    android:background="#ffbb50">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="242dp"
        android:weightSum="1"
        android:layout_weight="0.11">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo"
                android:id="@+id/tv_titulo"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_titulo"
                android:hint="@string/hint_titulo" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_editorial"
                android:id="@+id/tv_editorial"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_editorial"
                android:hint="@string/hint_editorial" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_autor"
                android:id="@+id/tv_autor"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_autor"
                android:hint="@string/hint_autor" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.17">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_genero"
                android:id="@+id/tv_genero"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sp_genero"
                android:entries="@array/genero"
                android:focusable="false" />

        </LinearLayout>

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/bt_add"
            android:layout_gravity="right"
            android:background="@drawable/add2"
            android:layout_marginRight="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="243dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_genero"
                android:id="@+id/textView4"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/sp_generoDisponibles"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_editorial"
                android:id="@+id/textView2"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/sp_editorialesDisponibles" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp" >

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_autor"
                android:id="@+id/textView3"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/sp_autoresDisponibles" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">


            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/tv_titulo"
                android:id="@+id/textView"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/sp_titulosDisponibles" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt_lupa"
                android:background="@drawable/lupa"
                android:enabled="false"
                android:layout_marginLeft="220dp"
                android:alpha="0.5" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/bt_lista"
                android:background="@drawable/lista"
                android:enabled="false"
                android:layout_marginBottom="5dp"
                android:alpha="0.5" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
